# constraint_solver

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  shader.wgsl
ConstraintsSolver/: AppDelegate.swift  Color.swift  EPA.swift  Geometry.swift  Info.plist  Intersector.swift  Renderer.swift  RigidBody.swift  ShaderTypes.h  Shaders.metal  System.swift  Transform.swift  ViewController.swift  main.swift
ConstraintsSolver.xcodeproj/: project.pbxproj
ConstraintsSolver.xcodeproj/xcshareddata/xcschemes/: ConstraintsSolver.xcscheme
ConstraintsSolver/App/: ViewController.swift
ConstraintsSolver/Renderer/: Camera.swift  Color.swift  Renderer.swift  Shaders.metal
ConstraintsSolver/Solver/: Collider.swift  Constraint.swift  EPA.swift  Frame.swift  GJK.swift  Geometry.swift  Integrator.swift  Intersector.swift  Mesh.swift  Orientation.swift  Plane.swift  Point.swift  Quaternion.swift  Rigid.swift  RigidBody.swift  Solver.swift  Space.swift  System.swift  Transform.swift  World.swift
figures/: Screen Recording 2021-04-15_at_13.17.02_@720.mov  ScreenRecording  ScreenRecording_2021-03-25.mov
shaders/: grid.wgsl  grid_clipspace.wgsl  grid_worldspace.wgsl  line.wgsl  shader.wgsl
src/: app.rs  camera.rs  collision.rs  constraint.rs  debug.rs  entity.rs  frame.rs  game.rs  geometry.rs  line_debugger.rs  main.rs  mesh.rs  numeric.rs  renderer.rs  rigid.rs  shapes.rs  simplex.rs  solver.rs  spatial.rs  world.rs
src/collision/: epa.rs  gjk.rs  sat.rs
src/geometry/: integrate.rs
